tests/baselines/reference/overloadResolutionTest1.errors.txt
tests/cases/compiler/overloadResolutionTest1.ts(7,18): error TS2769: No overload matches this call.
  Overload 1 of 2, '(bar: { a: number; }[]): string', gave the following error.
    Type 'string' is not assignable to type 'number'.
  Overload 2 of 2, '(bar: { a: boolean; }[]): number', gave the following error.
    Type 'string' is not assignable to type 'boolean'.
tests/cases/compiler/overloadResolutionTest1.ts(18,16): error TS2769: No overload matches this call.
  Overload 1 of 2, '(bar: { a: number; }): string', gave the following error.
    Type 'string' is not assignable to type 'number'.
  Overload 2 of 2, '(bar: { a: boolean; }): number', gave the following error.
    Type 'string' is not assignable to type 'boolean'.
tests/cases/compiler/overloadResolutionTest1.ts(24,15): error TS2769: No overload matches this call.
  Overload 1 of 2, '(bar: { a: number; }): number', gave the following error.
    Type 'boolean' is not assignable to type 'number'.
  Overload 2 of 2, '(bar: { a: string; }): string', gave the following error.
    Type 'boolean' is not assignable to type 'string'.


==== tests/cases/compiler/overloadResolutionTest1.ts (3 errors) ====
    function foo(bar:{a:number;}[]):string;
    function foo(bar:{a:boolean;}[]):number;
    function foo(bar:{a:any;}[]):any{ return bar };
    
    var x1 = foo([{a:true}]); // works
    var x11 = foo([{a:0}]); // works
    var x111 = foo([{a:"s"}]); // error - does not match any signature
                     ~
!!! error TS2769: No overload matches this call.
!!! error TS2769:   Overload 1 of 2, '(bar: { a: number; }[]): string', gave the following error.
!!! error TS2769:     Type 'string' is not assignable to type 'number'.
!!! error TS2769:   Overload 2 of 2, '(bar: { a: boolean; }[]): number', gave the following error.
!!! error TS2769:     Type 'string' is not assignable to type 'boolean'.
!!! related TS6500 tests/cases/compiler/overloadResolutionTest1.ts:1:19: The expected type comes from property 'a' which is declared here on type '{ a: number; }'
!!! related TS6500 tests/cases/compiler/overloadResolutionTest1.ts:2:19: The expected type comes from property 'a' which is declared here on type '{ a: boolean; }'
    var x1111 = foo([{a:null}]); // works - ambiguous call is resolved to be the first in the overload set so this returns a string
    
    
    
    function foo2(bar:{a:number;}):string;
    function foo2(bar:{a:boolean;}):number;
    function foo2(bar:{a:any;}):any{ return bar };
    
    var x2 = foo2({a:0}); // works
    var x3 = foo2({a:true}); // works
    var x4 = foo2({a:"s"}); // error
                   ~
!!! error TS2769: No overload matches this call.
!!! error TS2769:   Overload 1 of 2, '(bar: { a: number; }): string', gave the following error.
!!! error TS2769:     Type 'string' is not assignable to type 'number'.
!!! error TS2769:   Overload 2 of 2, '(bar: { a: boolean; }): number', gave the following error.
!!! error TS2769:     Type 'string' is not assignable to type 'boolean'.
!!! related TS6500 tests/cases/compiler/overloadResolutionTest1.ts:12:20: The expected type comes from property 'a' which is declared here on type '{ a: number; }'
!!! related TS6500 tests/cases/compiler/overloadResolutionTest1.ts:13:20: The expected type comes from property 'a' which is declared here on type '{ a: boolean; }'
    
    
    function foo4(bar:{a:number;}):number;
    function foo4(bar:{a:string;}):string;
    function foo4(bar:{a:any;}):any{ return bar };
    var x = foo4({a:true}); // error
                  ~
!!! error TS2769: No overload matches this call.
!!! error TS2769:   Overload 1 of 2, '(bar: { a: number; }): number', gave the following error.
!!! error TS2769:     Type 'boolean' is not assignable to type 'number'.
!!! error TS2769:   Overload 2 of 2, '(bar: { a: string; }): string', gave the following error.
!!! error TS2769:     Type 'boolean' is not assignable to type 'string'.
!!! related TS6500 tests/cases/compiler/overloadResolutionTest1.ts:21:20: The expected type comes from property 'a' which is declared here on type '{ a: number; }'
!!! related TS6500 tests/cases/compiler/overloadResolutionTest1.ts:22:20: The expected type comes from property 'a' which is declared here on type '{ a: string; }'